runtime/src/test/resources/tests/error/stack_overflow_1.wstl
package stack_overflow

result: f(10000000)

def f(value) {
  if value == 0 then 0 else f(value - 1)
}
